src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Company_Webb_Address__c</fullName>
        <description>Used in the email templates to populate header with company/department specific information.</description>
        <inlineHelpText>Used in the email templates to populate header with company/department specific information.</inlineHelpText>
        <label>Company Webb Address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
                <color>#3333FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
                <color>#CC6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
                <color>#990000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department_Phone__c</fullName>
        <description>Used in the email templates to populate header with company/department specific information.</description>
        <inlineHelpText>Used in the email templates to populate header with company/department specific information.</inlineHelpText>
        <label>Department Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FO_Sales_group__c</fullName>
        <label>FO / Sales group</label>
        <picklist>
            <controllingField>Sales_Area1__c</controllingField>
            <picklistValues>
                <fullName>1100 Strategic Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1400 Developing Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1500 Industrial market and e-commerce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1700 Internationell Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1900 SME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010 PDK Frimärken</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4100 SMV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4200 KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4300 Logistik Breve DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4400 LO -DK Koncernförhåll</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4500 Nysalg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4700 E-kommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK23 Storkunder M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK25 Int. Direct Link M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK26 Bolag/Övrigt M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK27 Retail M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK28 KAM M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK30 SME M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK44 SE STHLM S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK45 KAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK47 FC/OMBUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK49 Övrigt L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK50 SE ÖST L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK51 SE MITT/NORD L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK52 SE SYD L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK53 SE VÄST L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK54 SE STHLM N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FK55</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HR_ID__c</fullName>
        <description>ID from HCM</description>
        <externalId>true</externalId>
        <label>HR ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Org_unit_ID__c</fullName>
        <description>HCM ID for organisational unit</description>
        <label>Org unit ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_unit_name__c</fullName>
        <description>Name of the organizational unit</description>
        <label>Org unit name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PN_AD_User_ID__c</fullName>
        <externalId>true</externalId>
        <label>PN AD User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sales_Area1__c</fullName>
        <label>Sales Area 1</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0540</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Area_1_Text__c</fullName>
        <formula>TEXT( Sales_Area1__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Area 1 Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_2__c</fullName>
        <label>Sales Area 2</label>
        <picklist>
            <picklistValues>
                <fullName>1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO91</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3670</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LO NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO92</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0630</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST SE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Email__c</fullName>
        <description>Used in the email templates to populate header with company/department specific information.</description>
        <inlineHelpText>Used in the email templates to populate header with company/department specific information.</inlineHelpText>
        <label>Team Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <picklist>
            <controllingField>FO_Sales_group__c</controllingField>
            <picklistValues>
                <fullName>PN DK FRM Team Distribution Kista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Driftssupport Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Driftsudvikling Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Procesoptimering Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Kundeløsninger Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Top 50 Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Team Øst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Team Vest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Drift Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Reklamationer Erhvervspost Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Salgsadministration Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK FRM Team Produkt og Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK FRM Team Salg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Digital Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK MOD/Skrivpost Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Reklamationer Privat Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PN DK Team Told</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>101 Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>102 Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403 Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>404 Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>405 Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>046 Sales Office KBH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>071 ekommunikation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>072 IP IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>073 INC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>901 CPH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>902 AAH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>093 Private Kunder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>094 EK Frimaerker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Autonumber__c</fullName>
        <description>Used for BI. Not for use inside SFDC.</description>
        <displayFormat>U-{000000}</displayFormat>
        <label>User Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>actimizerdialer__OutboundPhone__c</fullName>
        <description>The phone number used by an Actimizer Agent when calling Leads, Opportunities, etc.</description>
        <label>Outbound Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Sales_Area1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator,Postnord System Administrator</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Users_activation</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <label>All Users  - activation</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_Admin_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CS_Standard_user_PDK</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Team__c</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>CS Standard User - PDK BE</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CS Standard user PDK</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Sales_Area_1_is_required</fullName>
        <active>true</active>
        <description>Sales Area 1 runs most of the processes within the system. Must be provided for every user</description>
        <errorConditionFormula>ISBLANK( TEXT( Sales_Area1__c )) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Area1__c</errorDisplayField>
        <errorMessage>Sales Area must be provided for User</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Area_1_must_be_PDK_BE_PDK_LO</fullName>
        <active>true</active>
        <description>For Breve rollout only PDK BE or LO DK or PDK LO can be chosen for Sales Area 1 on user (SAP not set up to receive the rest yet). UPDATE OR REMOVE THIS RULE WHEN FURTHER SALES AREAS COME ONLINE</description>
        <errorConditionFormula>OR( ISPICKVAL( Sales_Area1__c , &apos;FO91&apos;),
ISPICKVAL( Sales_Area1__c , &apos;FO92&apos;),
ISPICKVAL( Sales_Area1__c , &apos;0630&apos;),
ISPICKVAL( Sales_Area1__c , &apos;3670&apos;),
ISPICKVAL( Sales_Area1__c , &apos;LO DK&apos;),
ISPICKVAL( Sales_Area1__c , &apos;LO NO&apos;)) &amp;&amp; $Setup.DisableAutomation__c.Disable_All_Validation_Rules__c = false</errorConditionFormula>
        <errorDisplayField>Sales_Area1__c</errorDisplayField>
        <errorMessage>User can only be in Sales Area PDK BE or PDK LO</errorMessage>
    </validationRules>
</CustomObject>